apps/overlays/production/plex/patches/use-secret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: plex
spec:
  template:
    spec:
      containers:
        - name: plex
